# maddies-plant-shop

./: LICENSE  README.md  Template.txt  package-lock.json  package.json
back_end/: basket_database.db  common_functions.py  plants_database.db  rest_api.py
back_end/database/: plants_database.db
back_end/python/: pyproject.toml  requirements.txt  rest_api.py
back_end/python/tests/: test_rest_api.py
back_end/python/tests/database/: test_plants_database.db
front_end/css/: basket-page.css  plants-about-page.css  plants-contact-page.css  plants-homepage.css
front_end/html/: basket-page.html  plants-about-page.html  plants-contact-page.html  plants-homepage.html
front_end/js/: plants-about-page.js  plants-basket.js  plants-contact-about-page.js  plants-contact-page.js  plants-homepage.js  plants-homepage.spec.js
