[tool.poetry]
name = "back_end"
version = "0.1.0"
description = ""
authors = ["mwilliams659 <63402316+mwilliams659@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.3.22"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
